ggapp/templates/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: db
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      name: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels: 
        name: db
    spec:
      containers:
        - args:
            - redis-server
            - --requirepass
            - test
            - --port
            - "10000"
          image: redis:alpine
          name: redis
          ports:
            - containerPort: 10000
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/redis/data
              name: redis-claim0
      restartPolicy: Always
      volumes:
        - name: redis-claim0
          persistentVolumeClaim:
            claimName: redis-claim0
status: {}
