ggapp/templates/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: db
  name: redis
spec:
  ports:
    - name: "10000"
      port: 10000
      targetPort: 10000
  selector:
    name: db
status:
  loadBalancer: {}
