ggapp/templates/devops-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: app
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
